Production/force-app/main/default/objects/Case/fields/Attn_to__c.field-meta.xml
<CustomField>
    <fullName>Attn_to__c</fullName>
    <label>Attn to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>