Production/force-app/main/default/objects/Case/fields/Discount_Program_Existing_Customers__c.field-meta.xml
<CustomField>
    <fullName>Discount_Program_Existing_Customers__c</fullName>
    <description>(PAX-US-0228)</description>
    <inlineHelpText>(PAX-US-0228)</inlineHelpText>
    <label>Discount Program-Existing Customers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>