Production/force-app/main/default/objects/Case/fields/Discount_Program_Pay_in_Full__c.field-meta.xml
<CustomField>
    <fullName>Discount_Program_Pay_in_Full__c</fullName>
    <description>(PAX-US-0229)</description>
    <inlineHelpText>(PAX-US-0229)</inlineHelpText>
    <label>Discount Program-Pay in Full</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>