Production/force-app/main/default/objects/Case/fields/HCP_Flashcard_98__c.field-meta.xml
<CustomField>
    <fullName>HCP_Flashcard_98__c</fullName>
    <description>(PAX-US-0218)</description>
    <inlineHelpText>(PAX-US-0218)</inlineHelpText>
    <label>Vaxchora HCP Flashcard – 98 %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>