Production/force-app/main/default/objects/Case/fields/IDSA_Pocket_Folders__c.field-meta.xml
<CustomField>
    <fullName>IDSA_Pocket_Folders__c</fullName>
    <inlineHelpText>Volume Discount Selling Folders</inlineHelpText>
    <label>Volume Discount Selling Folders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>