Production/force-app/main/default/objects/Case/fields/In_office_Savings_Cards_5x7__c.field-meta.xml
<CustomField>
    <fullName>In_office_Savings_Cards_5x7__c</fullName>
    <inlineHelpText>PAX-US-0249</inlineHelpText>
    <label>In-office Savings Cards (5x7)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>