Production/force-app/main/default/objects/Case/fields/Instructions_Comments__c.field-meta.xml
<CustomField>
    <fullName>Instructions_Comments__c</fullName>
    <description>Use this field to leave any instructions or questions pertaining to the case.</description>
    <inlineHelpText>Use this field to leave any instructions or questions pertaining to the case.</inlineHelpText>
    <label>Instructions/Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>