Production/force-app/main/default/objects/Case/fields/MMWR_Booklets__c.field-meta.xml
<CustomField>
    <fullName>MMWR_Booklets__c</fullName>
    <description>PAX-US-0132 [MMWR Booklets]</description>
    <inlineHelpText>PAX-US-0132 [MMWR Booklets]</inlineHelpText>
    <label>MMWR Booklets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>