Production/force-app/main/default/objects/Case/fields/Patient_Profiler__c.field-meta.xml
<CustomField>
    <fullName>Patient_Profiler__c</fullName>
    <description>PAX-US-0226</description>
    <inlineHelpText>PAX-US-0226</inlineHelpText>
    <label>Vaxchora Patient Profiler</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>