Production/force-app/main/default/objects/Case/fields/PaxVax_Envelopes_Chen__c.field-meta.xml
<CustomField>
    <fullName>PaxVax_Envelopes_Chen__c</fullName>
    <description>PAX-US-0098 [PaxVax Envelopes (Chen)]</description>
    <inlineHelpText>PAX-US-0098 [PaxVax Envelopes (Chen)]</inlineHelpText>
    <label>PaxVax Envelopes (Chen)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>