Production/force-app/main/default/objects/Case/fields/PaxVax_Envelopes_Herzog__c.field-meta.xml
<CustomField>
    <fullName>PaxVax_Envelopes_Herzog__c</fullName>
    <description>PAX-US-0099 [PaxVax Envelopes (Herzog)]</description>
    <inlineHelpText>PAX-US-0099 [PaxVax Envelopes (Herzog)]</inlineHelpText>
    <label>PaxVax Envelopes (Herzog)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>