Production/force-app/main/default/objects/Case/fields/PaxVax_In_Office_Poster__c.field-meta.xml
<CustomField>
    <fullName>PaxVax_In_Office_Poster__c</fullName>
    <description>PAX-US-0282 [Emergent (In-Office Poster)]</description>
    <inlineHelpText>PAX-US-0282 [Emergent (In-Office Poster)]</inlineHelpText>
    <label>Emergent(In-Office Poster)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>