Production/force-app/main/default/objects/Case/fields/PaxVaxconnect_com_Business_Cards__c.field-meta.xml
<CustomField>
    <fullName>PaxVaxconnect_com_Business_Cards__c</fullName>
    <description>PAX-US-0142 [PaxVaxconnect.com Business Cards (Magnet)]</description>
    <inlineHelpText>PAX-US-0142 [PaxVaxconnect.com Business Cards (Magnet)]</inlineHelpText>
    <label>PaxVaxconnect.com Business Cards</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>