Production/force-app/main/default/objects/Case/fields/Sales_Planner__c.field-meta.xml
<CustomField>
    <fullName>Sales_Planner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Planner</label>
    <referenceTo>Sales_Planner__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>