Production/force-app/main/default/objects/Case/fields/Unbranded_Brochure__c.field-meta.xml
<CustomField>
    <fullName>Unbranded_Brochure__c</fullName>
    <description>PAX-US-0246</description>
    <inlineHelpText>PAX-US-0246</inlineHelpText>
    <label>Unbranded Brochure</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>