Production/force-app/main/default/objects/Case/fields/Vaxchora_Flashcard_8_5x11__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_Flashcard_8_5x11__c</fullName>
    <description>PAX-US-0109-B [Vaxchora Flashcard (8.5x11)]</description>
    <inlineHelpText>PAX-US-0109-B [Vaxchora Flashcard (8.5x11)]</inlineHelpText>
    <label>Vaxchora Flashcard (8.5x11)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>