Production/force-app/main/default/objects/Case/fields/Vaxchora_HCP_Leave_Behind__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_HCP_Leave_Behind__c</fullName>
    <description>PAX-US-0137[Vaxchora HCP Leave Behind]</description>
    <inlineHelpText>PAX-US-0137 [Vaxchora HCP Leave Behind]</inlineHelpText>
    <label>Vaxchora HCP Leave Behind</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>