Production/force-app/main/default/objects/Case/fields/Vaxchora_Reconstitution_ClingZ_Large__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_Reconstitution_ClingZ_Large__c</fullName>
    <description>PAX-US-0048-LG [Vaxchora Reconstitution ClingZ (Large)]</description>
    <inlineHelpText>PAX-US-0048-LG [Vaxchora Reconstitution ClingZ (Large)]</inlineHelpText>
    <label>Vaxchora Reconstitution ClingZ (Large)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>