Production/force-app/main/default/objects/Case/fields/Vaxchora_Sales_Aid__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_Sales_Aid__c</fullName>
    <description>Vaxchora Sales Aid (For internal shipments only)</description>
    <inlineHelpText>Strictly for internal knowledge purpose.They weren&#39;t approved to be directly shipped or left behind with the customers.</inlineHelpText>
    <label>Vaxchora Sales Aid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>