Production/force-app/main/default/objects/Case/fields/Vaxchora_Scheduler_Alert_ClingZ_Large__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_Scheduler_Alert_ClingZ_Large__c</fullName>
    <description>PAX-US-0068-LG [Vaxchora Scheduler Alert ClingZ (Large)]</description>
    <inlineHelpText>PAX-US-0068-LG [Vaxchora Scheduler Alert ClingZ (Large)]</inlineHelpText>
    <label>Vaxchora Scheduler Alert ClingZ (Large)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>