Production/force-app/main/default/objects/Case/fields/Vaxchora_Scheduler_Alert_ClingZ_Small__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_Scheduler_Alert_ClingZ_Small__c</fullName>
    <description>PAX-US-0068-SM [Vaxchora Scheduler Alert ClingZ (Small)]</description>
    <inlineHelpText>PAX-US-0068-SM [Vaxchora Scheduler Alert ClingZ (Small)]</inlineHelpText>
    <label>Vaxchora Scheduler Alert ClingZ (Small)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>