Production/force-app/main/default/objects/Case/fields/Vivotif_Dosing_Admin_ClingZ__c.field-meta.xml
<CustomField>
    <fullName>Vivotif_Dosing_Admin_ClingZ__c</fullName>
    <description>PAX-US-0133 [Vivotif Dosing &amp; Admin ClingZ]</description>
    <inlineHelpText>PAX-US-0133 [Vivotif Dosing &amp; Admin ClingZ]</inlineHelpText>
    <label>Vivotif Dosing &amp; Admin ClingZ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>