Production/force-app/main/default/objects/Case/fields/Vivotif_Leave_Behind__c.field-meta.xml
<CustomField>
    <fullName>Vivotif_Leave_Behind__c</fullName>
    <description>PAX-US-0161  [Vivotif Leave Behind]</description>
    <inlineHelpText>PAX-US-0161  [Vivotif Leave Behind]</inlineHelpText>
    <label>Vivotif Leave Behind</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>