Production/force-app/main/default/objects/Case/fields/Vivotif_PI__c.field-meta.xml
<CustomField>
    <fullName>Vivotif_PI__c</fullName>
    <description>PAX-VIVOTIF-PI [Vivotif Prescribing Information]</description>
    <inlineHelpText>PAX-VIVOTIF-PI [Vivotif Prescribing Information]</inlineHelpText>
    <label>Vivotif PI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>