Production/force-app/main/default/objects/Case/fields/Vivotif_Pochette_Pouch_with_PIs__c.field-meta.xml
<CustomField>
    <fullName>Vivotif_Pochette_Pouch_with_PIs__c</fullName>
    <description>PAX-US-0258 Vivotif Pochette/Pouch with PIs</description>
    <inlineHelpText>PAX-US-0258 Vivotif Pochette/Pouch with PIs</inlineHelpText>
    <label>Vivotif Pochette/Pouch with PIs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>