Production/force-app/main/default/objects/Case/fields/Vivotif_Product_Monograph__c.field-meta.xml
<CustomField>
    <fullName>Vivotif_Product_Monograph__c</fullName>
    <description>PAX-US-0003 Vivotif Product Monograph</description>
    <inlineHelpText>PAX-US-0003 Vivotif Product Monograph</inlineHelpText>
    <label>Vivotif Product Monograph</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>