Production/force-app/main/default/objects/Case/validationRules/CaseStatusProfileRestrictions.validationRule-meta.xml
<ValidationRule>
    <fullName>CaseStatusProfileRestrictions</fullName>
    <active>true</active>
    <description>Sys Admin profile- access to change the status</description>
    <errorConditionFormula>And(ISCHANGED(Status),$Profile.Id&lt;&gt;&quot;00e610000015fhh&quot;)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You don&#39;t have any access to change the status of the case.</errorMessage>
</ValidationRule>