Production/force-app/main/default/objects/Case/validationRules/ExpeditedPriority.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpeditedPriority</fullName>
    <active>true</active>
    <description>Expected Delivery date is a required field if &quot;Expedited&quot; is selected as the priority.</description>
    <errorConditionFormula>And(
 ISPICKVAL( Priority, &quot;Standard&quot;),
 Not(ISBLANK( Expected_Delivery_Date__c ))
)</errorConditionFormula>
    <errorDisplayField>Expected_Delivery_Date__c</errorDisplayField>
    <errorMessage>This field needs to be populated only when&quot;Priority field&quot; is &quot;Expedited&quot;.</errorMessage>
</ValidationRule>