Production/force-app/main/default/objects/Case/listViews/Marketing_Material_On_Hold_Cases.listView-meta.xml
<ListView>
    <fullName>Marketing_Material_On_Hold_Cases</fullName>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Expected_Delivery_Date__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.REASON</columns>
    <columns>Sales_Planner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.REASON</field>
        <operation>equals</operation>
        <value>Marketing Materials Request</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>On Hold</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>vmark</value>
    </filters>
    <label>Marketing Material On Hold Cases</label>
</ListView>